...
                  destination: s.destination,
                }))
              }
            />
          ) : null}
          <Button
            testID="open-filters"
            variant="outline"
            icon={
              <Ionicons
                name="filter-outline"
                size={16}
                color={theme.colors['foreground']}
...
